--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,1 +1,7 @@
-<h1>contact</h1>
+
+
+<div class="container">
+
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScm62fB-_AriwtLn8temWT9qRHRQID_uYlIQO__Y5MYoOhkHw/viewform?embedded=true" width="640" height="1015" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
