--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,33 +1,44 @@
 
   <!-- Main Content -->
   <div class="container">
+  <div class="post-wrapper">
     <div class="row">
      <% @posts.each do |post| %>
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="post-preview">
-          <a href="post.html">
+  
             <h2 class="post-title">
               <%= link_to post_path(post) do %>
-              <%= post.title %>
-                <%= image_tag post.image.url, class: "img-fluid rounded" %>
-                <% end %>
+              <%= post.title %><br/>
             </h2>
+                <div class="row">
+                <div class="col-4">
+                <%= image_tag post.image.url, class: "img-thumbnail" %>
+                <% end %>
+                </div>
+                  <div class="col-8">
             <h3 class="post-subtitle">
-           
+              <%= sanitize(truncate(post.body, length: 150)) %>
+              <%= link_to post_path(post) do %><br/>
+              <small>read more</small>
+                <% end %>
             </h3>
-          </a>
+            </div>
+            </div>
+ 
           <p class="post-meta">Posted by
-            <a href="#">Admin</a> on
+            <a href="#">Andreina</a> on
             <%= "#{post.created_at.strftime("%m/%d/%y")}" %></p>
         </div>
-        <!-- Pager -->
-     
+    
+     <hr/>
       </div>
       <% end %>
-        
+ 
     </div>
-     <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+    </div>
+     <div>
+          <%= will_paginate @posts %>
         </div>
   </div>
 
