--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <%= link_to "Giving Birth", root_path, {:class => "navbar-brand"} %>
+      <%= link_to "Respira", root_path, {:class => "navbar-brand"} %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -12,10 +12,13 @@
             <%= link_to "Home", root_path, {:class => "nav-link"} %>
           </li>
           <li class="nav-item">
-            <%= link_to "References", references_path, {:class => "nav-link"} %>
+            <%= link_to "Resources", references_path, {:class => "nav-link"} %>
           </li>
           <li class="nav-item">
-            <%= link_to "Services", services_path, {:class => "nav-link"} %>
+            <%= link_to "Doula Services", services_path, {:class => "nav-link"} %>
+          </li>
+             <li class="nav-item">
+            <%= link_to "About Me", about_path, {:class => "nav-link"} %>
           </li>
           <li class="nav-item">
             <%= link_to "Contact", contact_path, {:class => "nav-link"} %>
@@ -34,7 +37,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Giving Birth</h1>
+            <h1>Respira</h1>
             <span class="subheading">This is a subtitle</span>
           </div>
         </div>
